change the font face per Kendra's suggestion, fix white space in data-link-to

--- a/wp-content/themes/bijouxs/style.css
+++ b/wp-content/themes/bijouxs/style.css
@@ -108,7 +108,6 @@ DESCRIPTION: Two-column fixed layout with one sidebar right of content
 #primary,
 #secondary {
 	float: left;
-/*	overflow: hidden;*/
 	width: 231px;
 }
 #secondary {
@@ -147,7 +146,7 @@ input,
 textarea,
 .page-title span,
 .pingback a.url {
-	font-family: Gothic720BT-LightB, sans-serif;
+	font-family: 'Gothic720BT-RomanB', sans-serif;
 }
 h3#comments-title,
 h3#reply-title,
@@ -1700,7 +1699,7 @@ div.product:after,
 
 .post-numbering{padding:4px 0px 0px 0px; height:33px; color:#aeaca9;margin-left:20px; margin-bottom:1px}
 .pval{position:relative; top:0px; left:5px; font-size: 37px; font-weight: 100; color: #21211d; font-family: DidotLPRegularWeb, sans-serif;}
-.entry-content p{margin:0px 14px 24px 24px; line-height:22px; font-size: 14px; font-family: Gothic720BT-LightB, sans-serif; color: #21211d; }
+.entry-content p{margin:0px 14px 24px 24px; line-height:22px; font-size: 14px; font-family: 'Gothic720BT-RomanB', sans-serif; color: #21211d; }
 #content .entry-content p a img {
 /*	margin:0px 14px 24px 24px; line-height:22px; font-size: 14px; font-family: Gothic720BT-LightB, sans-serif; color: #21211d; */
 	margin-left: -22px;
@@ -2406,8 +2405,7 @@ body.home .collection li {
 
 body.home .collection li h2 {
 	margin: 24px 0 10px;
-	font-size: 18px;
-	line-height: 22px;
+	font: 18px/22px 'Gothic720BT-LightB';
 }
 
 body.home .collection li p {
@@ -2849,6 +2847,7 @@ div.product .product-gallery .bx-viewport {
 	width: 364px;
 	font-size: 14px;
 	line-height: 22px;
+	color: #21211d;
 }
 
 .product .product-description h2 {
@@ -2945,6 +2944,6 @@ html body.single div#wrapper.hfeed div#main div.product-description form.cart bu
 	line-height: 23px;
 }
 
-.slider .target:hover .overlay{
+.slider .target:hover .overlay {
 	opacity: 1;
 }
